[project]
name = "ai-financial-copilot"
version = "0.1.0"
description = "Multi-agent RAG system with tool-calling and episodic memory for autonomous financial anal"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
